# aoc-2024

./: Cargo.toml  README.md
src/: lib.rs
